--- a/style.css
+++ b/style.css
@@ -50,7 +50,10 @@ body {
     font-size: 1.7em;
 }
 
-#list {
+#list > li {
+    display: flex;
+    justify-content: space-between;
+    width: 94%;
 }
 
 #list > li  > span{
@@ -65,9 +68,6 @@ body {
     border-radius: 20px;
     border: 0;
     padding: 5px 10px 5px 10px;
-    margin-top: 15px;
-    margin-left: 10px;
     font-size: 1em !important;
-    position: relative;
-    
+    margin-bottom: 10px;
 }
